[project]
name = "universal_input_hub_by_steve_lasmin"
description = "All-in-one ComfyUI workflow hub: resolution calculator, noise, sigmas, conditioning, and sampler outputs"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Eklipsis/universal_input_hub_by_steve_lasmin"

[tool.comfy]
PublisherId = "stevelasmin4real"
DisplayName = "Universal Input Hub by Steve Lasmin"
Icon = ""
